[metadata]
name = startnet
version = attr: startnet.version.__version__
url = https://github.com/sunarch/startnet
project_urls =
    Bug Tracker = https://github.com/sunarch/startnet/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Environment :: Console
    Environment :: Web Environment
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Topic :: Artistic Software
    Topic :: Multimedia
    Topic :: System :: Networking
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = startnet - Art-Net protocol implementation
long_description = file: README.md
long_description_content_type = text/markdown
keywords = startnet, Art-Net
platforms = Any

[options]
install_requires = file: requirements.txt
python_requires = >=3.9
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    startnet = startnet.__main__:main

[options.packages.find]
where = src

[options.package_data]
    startnet =
        data/logger.ini
        data/oem-codes.csv
