[metadata]
name = libmonty-artnet
version = attr: libmonty_artnet.version.__version__
url = https://codeberg.org/sunarch/libmonty-artnet
project_urls =
    Bug Tracker = https://codeberg.org/sunarch/libmonty-artnet/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Environment :: Console
    Environment :: Web Environment
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Topic :: Artistic Software
    Topic :: Multimedia
    Topic :: System :: Networking
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = libmonty-artnet - Art-Net™ protocol implementation
long_description = file: README.md
long_description_content_type = text/markdown
keywords = libmonty, libmonty-artnet, Art-Net, Artistic Licence
platforms = Any

[options]
install_requires = file: requirements.txt
python_requires = >=3.9
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    artnet = libmonty_artnet.__main__:main

[options.packages.find]
where = src

[options.package_data]
    libmonty_artnet =
        data/oem-codes.csv
